Fix tabs buttons size sometimes flickering

--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -1,6 +1,7 @@
 .b-tabs {
     .tabs {
         margin-bottom: 0;
+        flex-shrink: 0;
     }
     .is-disabled {
         pointer-events: none;
